<resources>
    <string name="app_name">PinTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">488553524964-1bf67kqneq46jrgv5dfb8h507lvt0f5s.apps.googleusercontent.com</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="clear_all_tasks">Clear All Tasks</string>
    <string name="unpin_all_tasks">Unpin All tasks</string>
    <string name="ui_mode">Light Mode</string>
</resources>