<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/signout"
                android:title="@string/sign_out" />
            <item
                android:id="@+id/deleteAccount"
                android:icon="@drawable/baseline_delete_outline_24"
                android:title="@string/delete_account" />
        </menu>
    </item>
    <item android:title="Display Preferences">
        <menu>
            <item
                android:id="@+id/uiMode"
                android:icon="@drawable/light_mode_menu"
                android:title="@string/ui_mode" />
        </menu>
    </item>
    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/clearTasks"
                android:icon="@drawable/baseline_clear_all_24"
                android:title="@string/clear_all_tasks" />
            <item
                android:id="@+id/unpinAllTasks"
                android:icon="@drawable/pushpin_unselected"
                android:title="@string/unpin_all_tasks" />
        </menu>
    </item>
    <item android:title="About">
        <menu>
            <item
                android:id="@+id/developer"
                android:icon="@drawable/about_outline"
                android:title="Developer" />
            <item
                android:id="@+id/doc"
                android:icon="@drawable/doc_outline"
                android:title="Documentations" />
        </menu>
    </item>
    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/round_exit_24"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>